- css > 고급 > transform 작업 중, part script 수정

--- a/assets/kmtemp/transform/css/layout.less
+++ b/assets/kmtemp/transform/css/layout.less
@@ -1,69 +1,32 @@
 @charset "UTF-8";
 
-
-html {background:#eee;}
+html {background:#f5f5f5;}
 body {background:none;}
 .mt15 {margin-top:15px !important;}
+.copy_btn {display:none !important;}
 @gray: #ccc;
 
 
 /* layout */
-	.headerArea {
-		position:relative; z-index:1;
-		padding:100px 0 0; text-align:center;
-		h1 {
-			line-height:50px;
-			.font-os; font-size:50px; font-weight:100; color:#222;
-		}
-		> p {
-			line-height:16px; margin-top:20px;
-			.font-sc400; font-size:16px; color:#666;
-			b {
-				display:block; margin-top:7px;
-				font-size:15px; color:@blue;
-				&:before {content:"- ";}
-				&:after {content:" -";}
-			}
-		}
-		> div {
-			display:inline-block;
-			line-height:20px; margin-top:30px; padding:10px;
-			.font-sc400; font-size:14px; color:@white;
-			background:@blue;
-			b {font-weight:normal;}
-			i {display:block;}
-		}
-	}
-	@media (max-width:@screen-sm-max) {
-		.headerArea {
-			padding:50px 0 0;
-			h1 {line-height:40px; font-size:32px;}
-			> p {margin-top:15px; font-size:13px;}
-			> div {
-				line-height:18px; margin-top:10px; padding:6px 7px;
-				font-size:12px;
-			}
-		}
-	}
-
 	.contentArea {
 		position:relative; z-index:2;
-		padding:0 50px 100px; text-align:center;
+		padding:15px 15px 20px; text-align:center;
 		article {
-			max-width:1000px; margin:100px auto 0;
+			margin:50px auto 0;
+			&:first-child {margin-top:25px;}
 			h2 {
-				line-height:24px;
-				font-size:24px; color:#444; .font-os;
-				i {.font-sc500; font-size:20px;}
+				line-height:18px;
+				font-size:18px; color:#222; .font-os; font-weight:600;
+				i {.font-sc500; font-size:16px;}
 				&:before {margin-right:10px; content:"--";}
 				&:after {margin-left:10px; content:"--";}
 			}
 
 			.s_tit {
-				line-height:18px; margin-top:10px;
-				.font-sc500; font-size:15px; letter-spacing:-0.5px; color:#777;
-				i {.font-os; font-weight:600;}
-				b {color:@blue; font-weight:500;}
+				line-height:18px; margin-top:6px;
+				.font-kr; font-size:14px; letter-spacing:-0.5px; color:#777; font-weight:400;
+				i {.font-kr; font-weight:400;}
+				b {color:@blue; font-weight:400;}
 				a {
 					color:@blue; text-decoration:underline;
 					&:hover {color:darken(@blue, 20%);}
@@ -76,7 +39,7 @@ body {background:none;}
 					&:first-child {margin-top:0;}
 				}
 			}
-			h2 + .s_tit {margin-top:15px;}
+			h2 + .s_tit {margin-top:10px;}
 		}
 		.ex_lst {
 			margin-top:50px; padding:40px; text-align:left;
@@ -108,10 +71,9 @@ body {background:none;}
 		}
 		.lst_area {
 			.clear; position:relative;
-			margin-top:40px;
-			//background:#222;
+			margin-top:20px;
 			background:@white;
-			border:7px solid @gray; border-radius:5px;
+			border:4px solid @gray;
 			&:before {
 				position:absolute; left:0; bottom:0;
 				width:100%; height:50px; background:#222;
@@ -226,14 +188,14 @@ body {background:none;}
 	}
 	@media (max-width:@screen-sm-max) {
 		.contentArea {
-			padding:0 15px 50px;
+			padding:0 10px 50px;
 			article {
-				margin-top:50px;
+				margin-top:30px;
 				h2 {
-					line-height:20px; font-size:20px;
-					i {font-size:16px;}
+					line-height:16px; font-size:16px;
+					i {.font-sc600; font-size:14px;}
 				}
-				.s_tit {margin-top:10px; font-size:13px;}
+				.s_tit {font-size:13px;}
 			}
 			.ex_lst {
 				margin-top:30px; padding:18px 15px 15px;
@@ -257,12 +219,12 @@ body {background:none;}
 				}
 			}
 			.lst_area {
-				margin-top:30px;
+				margin-top:15px;
 				border:0; background:none;
 				li {
 					float:none; width:auto;
 					margin-top:10px;
-					border:5px solid @gray;
+					border:3px solid @gray;
 					&:first-child:nth-last-child(2),
 					&:first-child:nth-last-child(2) ~ li {width:auto;}
 					&:first-child:nth-last-child(3),
@@ -387,7 +349,7 @@ body {background:none;}
 			.clear; position:relative;
 			line-height:30px; padding:15px 80px 15px 15px;
 			background:@blue;
-			p {margin:3px 8px 3px 0;}
+			p {.lft; margin:3px 8px 3px 0;}
 			input[type="text"] {
 				width:50px; height:30px; padding:0 5px;
 				.font-os; font-size:14px; color:@black; font-weight:600;
@@ -402,7 +364,7 @@ body {background:none;}
 				position:relative;
 				width:70px; padding:0 8px;
 				.font-os; font-size:14px; color:@black; font-weight:600;
-				background:#fff url('../../_img/select_arr.png') no-repeat right center;
+				background:#fff url('../../lib/img/select_arr.png') no-repeat right center;
 				background-size:15px auto;
 				border:0; border-radius:2px;
 				-webkit-appearance:none; -moz-appearance:none; appearance:none;
@@ -951,111 +913,6 @@ body {background:none;}
 		.axis_ex {display:none;}
 	}
 
-	/*
-	.box_md {
-		.box_clear {
-			@color_bd:#ff8383;
-			@color_pd:#0f0;
-			@color_box:#4b81db;
-
-			@color_bd_h:#ff8383;
-			@color_pd_h:#0f0;
-			@color_box_h:#4b81db;
-			//@color_mg:;
-			.clear;
-			.box_wrap {
-				.lft; position:relative;
-				width:49.999%; padding:40% 0 0; //overflow:hidden;
-				border-left:1px solid #ccc; border-right:0 !important;
-				&:before {
-					display:block; text-align:left;
-					position:absolute; left:13px; top:13px; transform:translate(0, 0);
-					width:auto; height:auto; background:none;
-					.font-os; font-size:13px; color:#666;
-					content:attr(data-tit);
-				}
-				&:after {display:none;}
-				&:first-child {
-					border-left:0;
-					.box {box-sizing:content-box;}
-				}
-				.lw {
-					position:absolute; left:0; top:50%;
-					width:1000px; height:1px;
-					border-top:1px dashed #ccc;
-				}
-				.lh {
-					position:absolute; left:50%; top:0;
-					width:1px; height:1000px;
-					border-left:1px dashed #ccc;
-				}
-				.box {
-					display:table; opacity:.5;
-					position:absolute; left:50%; top:50%; z-index:2;
-					transform:translate(-50%, -50%);
-					//width:100px; height:100px; padding:20px;
-					border:10px solid @color_bd;
-					background:@color_pd;
-					p {
-						display:table-cell; width:100%; height:100%;
-						background:@color_box;
-					}
-
-					&.b_width {
-						display:table;
-						position:absolute; left:50%; top:50%; z-index:2;
-						transform:translate(-50%, -50%);
-						opacity:1; box-sizing:border-box;
-						background:none; border:1px dashed #000 !important;
-						span {
-							//position:absolute; left:50%; top:50%;
-							//transform:translate(-50%, -50%);
-							//width:100%;
-							display:table-cell; vertical-align:middle;
-							line-height:20px;
-							.font-os; font-size:14px; font-weight:600;
-							color:#000;
-						}
-					}
-				}
-			}
-		}
-	}
-	@media(max-width:@screen-md-max) {
-		.box_md {
-			.box_clear {
-				.clear;
-				.box_wrap {padding:344px 0 0;}
-			}
-			.code_wrap .code {text-align:left;}
-		}
-	}
-	@media(max-width:@screen-sm-max) {
-		.box_md {
-			.box_clear {
-				.clear;
-				.box_wrap {
-					padding:230px 0 0;
-					&:before {left:10px; top:8px;}
-					.box {
-						transform:translate(-50%, -50%) scale(.6,.6);
-						&.b_width {
-							transform:translate(-50%, -50%) scale(.6,.6);
-							span {line-height:26px; font-size:20px;}
-						}
-					}
-				}
-			}
-			.code_wrap .form {
-				padding-right:15px;
-				div {
-					.clear; display:block;
-					&:first-child {margin-bottom:8px;}
-				}
-			}
-		}
-	}
-	*/
 	.box_md {
 		@color_bd:#ff8383;
 		@color_pd:#0f0;
@@ -1103,6 +960,7 @@ body {background:none;}
 					transform:translate(-50%, -50%);
 					transition:all .3s;
 					background:#ddd;
+					p {word-break:break-all; color:rgba(255,255,255,.7);}
 				}
 				.box {
 					display:block;
@@ -1645,7 +1503,7 @@ body {background:none;}
 			.ani_box {
 				display:inline-block; position:relative;
 				width:50px; height:72px; margin-top:10px;
-				background-image:url('../../_img/sprite-steps.png');
+				background-image:url('../../lib/img/sprite-steps.png');
 				animation:steps_play .8s linear infinite;
 				&.steps {animation-timing-function:steps(10);}
 			}
@@ -1839,7 +1697,7 @@ body {background:none;}
 				&:before {
 					left:50%; top:50%; transform:translate(-50%, -50%);
 					width:100%; height:100%;
-					background:url('../../_img/light-bulb.png') no-repeat center 100px;
+					background:url('../../lib/img/light-bulb.png') no-repeat center 100px;
 					background-size:contain;
 					transition:all .3s .2s cubic-bezier(0.645, 0.045, 0.355, 1);
 				}
@@ -1903,7 +1761,7 @@ body {background:none;}
 				letter-spacing:5px; text-indent:5px;
 				color:transparent;
 				background-color:#fff;
-				background-image:url('../../_img/wave_b_opacity_10.png'), url('../../_img/wave_b_opacity_10.png'), url('../../_img/wave_b_opacity_10.png');
+				background-image:url('../../lib/img/wave_b_opacity_10.png'), url('../../lib/img/wave_b_opacity_10.png'), url('../../lib/img/wave_b_opacity_10.png');
 				background-repeat:repeat-x;
 				background-size:1800px 100%;
 				animation:bg_ani_linear 35s linear infinite;
