--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -2555,6 +2555,11 @@
 		padding:20px 15px;
 		border:4px solid #eee; text-align:center;
 		img {max-width:100%; min-width:100px;}
+		.max-w900 {max-width:900px; min-width:100px; width:100%;}
+		.max-w850 {max-width:850px; min-width:100px; width:100%;}
+		.max-w800 {max-width:800px; min-width:100px; width:100%;}
+		.max-w750 {max-width:750px; min-width:100px; width:100%;}
+		.max-w700 {max-width:700px; min-width:100px; width:100%;}
 		figcaption {
 			margin-top:20px; text-align:center;
 			font-size:14px; font-weight:400; color:#666;
@@ -2917,7 +2922,7 @@
 	.iframe_con {
 		position:relative; overflow-y:hidden;
 		height:678px;
-		border:4px solid #eee;
+		//border:4px solid #eee;
 		iframe {
 			position:absolute; left:0; top:0;
 			width:100%; height:100%;
