--- a/assets/lib/css/uk.css
+++ b/assets/lib/css/uk.css
@@ -6338,6 +6338,31 @@ body {
   max-width: 100%;
   min-width: 100px;
 }
+.img_figure .max-w900 {
+  max-width: 900px;
+  min-width: 100px;
+  width: 100%;
+}
+.img_figure .max-w850 {
+  max-width: 850px;
+  min-width: 100px;
+  width: 100%;
+}
+.img_figure .max-w800 {
+  max-width: 800px;
+  min-width: 100px;
+  width: 100%;
+}
+.img_figure .max-w750 {
+  max-width: 750px;
+  min-width: 100px;
+  width: 100%;
+}
+.img_figure .max-w700 {
+  max-width: 700px;
+  min-width: 100px;
+  width: 100%;
+}
 .img_figure figcaption {
   margin-top: 20px;
   text-align: center;
@@ -6554,6 +6579,31 @@ body {
 .content_models img {
   max-width: 100%;
   min-width: 100px;
+}
+.content_models .max-w900 {
+  max-width: 900px;
+  min-width: 100px;
+  width: 100%;
+}
+.content_models .max-w850 {
+  max-width: 850px;
+  min-width: 100px;
+  width: 100%;
+}
+.content_models .max-w800 {
+  max-width: 800px;
+  min-width: 100px;
+  width: 100%;
+}
+.content_models .max-w750 {
+  max-width: 750px;
+  min-width: 100px;
+  width: 100%;
+}
+.content_models .max-w700 {
+  max-width: 700px;
+  min-width: 100px;
+  width: 100%;
 }
 .content_models figcaption {
   margin-top: 20px;
@@ -7028,7 +7078,6 @@ body {
   position: relative;
   overflow-y: hidden;
   height: 678px;
-  border: 4px solid #eee;
 }
 .iframe_con iframe {
   position: absolute;
