--- a/assets/kmtemp/transform/css/layout.less
+++ b/assets/kmtemp/transform/css/layout.less
@@ -42,18 +42,19 @@ body {background:none;}
 			h2 + .s_tit {margin-top:10px;}
 		}
 		.ex_lst {
-			margin-top:50px; padding:40px; text-align:left;
-			.font-sc500;
-			background:#fff; border:7px solid #ccc; border-radius:4px;
+			&.pc_mt_0 {margin-top:0;}
+			margin-top:20px; padding:20px; text-align:left;
+			.font-kr;
+			background:#fff; border:4px solid #ccc;
 			dt {
 				line-height:20px;
-				font-size:18px; color:#444; letter-spacing:-0.5px;
+				font-size:16px; color:#444; letter-spacing:-0.5px;
 				i {margin-right:3px; .font-icon;}
 			}
 			dd {
 				position:relative;
-				line-height:22px; margin-top:8px; padding-left:10px;
-				font-size:15px; letter-spacing:-0.5px; color:#777;
+				line-height:22px; margin-top:4px; padding-left:10px;
+				font-size:14px; letter-spacing:-0.5px; color:#777; font-weight:400;
 				&:before {
 					position:absolute; left:0; top:8px;
 					width:3px; height:3px; background:#aaa;
@@ -198,7 +199,8 @@ body {background:none;}
 				.s_tit {font-size:13px;}
 			}
 			.ex_lst {
-				margin-top:30px; padding:18px 15px 15px;
+				&.pc_mt_0 {margin-top:20px;}
+				margin-top:20px; padding:18px 15px 15px;
 				border-width:5px; border-radius:0;
 				dt {
 					line-height:20px; font-size:15px;
@@ -364,7 +366,7 @@ body {background:none;}
 				position:relative;
 				width:70px; padding:0 8px;
 				.font-os; font-size:14px; color:@black; font-weight:600;
-				background:#fff url('../../lib/img/select_arr.png') no-repeat right center;
+				background:#fff url('/assets/kmtemp/lib/img/select_arr.png') no-repeat right center;
 				background-size:15px auto;
 				border:0; border-radius:2px;
 				-webkit-appearance:none; -moz-appearance:none; appearance:none;
@@ -1165,7 +1167,7 @@ body {background:none;}
 			margin-top:50px;
 			&:first-child {margin-top:0;}
 		}
-		&.ex_lst {margin-top:40px;}
+		//&.ex_lst {margin-top:40px;}
 		.tit {
 			line-height:20px;
 			.font-sc600; font-size:18px; color:#444; letter-spacing:-0.2px;
