--- a/assets/lib/css/temp_transform.css
+++ b/assets/lib/css/temp_transform.css
@@ -866,7 +866,7 @@ body {
   line-height: 20px;
   padding-left: 10px;
   text-align: left;
-  font-family: 'S-CoreDream-4Regular', sans-serif;
+  font-family: 'Noto Sans KR', sans-serif;
   word-break: keep-all;
   font-size: 13px;
   color: #555;
