--- a/assets/kmtemp/transform/css/layout.less
+++ b/assets/kmtemp/transform/css/layout.less
@@ -157,7 +157,7 @@ body {background:none;}
 			li {
 				position:relative;
 				line-height:20px; padding-left:10px;
-				text-align:left; .font-sc500; word-break:keep-all;
+				text-align:left; .font-kr; word-break:keep-all;
 				font-size:13px; color:#555;
 				&:before {
 					position:absolute; left:0; top:9px;
