--- a/assets/lib/css/less/common.less
+++ b/assets/lib/css/less/common.less
@@ -875,3 +875,37 @@ mark {
 
 
 .mt30 {margin-top:30px;}
+
+
+.iScrollHorizontalScrollbar, .iScrollVerticalScrollbar {
+	position:absolute; right:3px; bottom:3px; z-index:1;
+	overflow:hidden;
+}
+.iScrollHorizontalScrollbar {
+	left:3px;
+	height:6px;
+	&.iScrollBothScrollbars {right:18px;}
+}
+.iScrollVerticalScrollbar {
+	top:3px;
+	width:6px;
+	&.iScrollBothScrollbars {bottom:18px;}
+}
+.iScrollIndicator {
+	position:absolute;
+	background:rgba(0,0,0,.2);
+	border-radius:10px;
+	cursor:pointer;
+}
+.iScrollHorizontalScrollbar .iScrollIndicator {height:100%;}
+.iScrollVerticalScrollbar .iScrollIndicator {width:100%;}
+@media(max-width:@screen-sm-max){
+	.iScrollHorizontalScrollbar {
+		height:3px;
+		&.iScrollBothScrollbars {right:18px;}
+	}
+	.iScrollVerticalScrollbar {
+		width:3px;
+		&.iScrollBothScrollbars {bottom:18px;}
+	}
+}
