--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -2584,14 +2584,19 @@
 					position:absolute; left:0; top:0; z-index:1;
 					width:@size; height:100%; padding:@pd_top 0;
 					background:rgba(255,255,255,.7);
+					counter-reset:line_number;
 					&:before {
 						position:absolute; right:0; top:0; bottom:0;
 						width:1px; background:rgba(0,0,0,.15);
 						content:"";
 					}
 					li {
-						padding-right:11px;
+						padding-right:12px;
 						color:#888; text-align:right;
+						&:before {
+							counter-increment:line_number;
+							content:counters(line_number, "");
+						}
 					}
 				}
 				.scroll_wrap {
