- css > 고급 > animation 작업 중

--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -2287,6 +2287,7 @@
 			content:"\f38b";
 		}
 		h3 {line-height:28px; font-size:18px; color:fade(@navy, 90%); letter-spacing:-0.3px;}
+		h3 * {line-height:28px;}
 		h3 .fa-html5 {margin:5px 0 0; color:@red;}
 		h3 .fa-css3-alt {margin:5px 0 0; color:@skyBlue;}
 		h3.reference a {font-weight:bold;}
@@ -2315,6 +2316,7 @@
 			h2.html5:after,
 			h2.css3:after {font-size:20px;}
 			h3 {line-height:22px; font-size:16px;}
+			h3 * {line-height:22px;}
 			h3 .fa-html5,
 			h3 .fa-css3-alt {margin:4px 0 0;}
 			h4 {line-height:20px; font-size:15px;}
