--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -2606,7 +2606,10 @@
 					margin-left:@size;
 				}
 				.scroll_inner {display:inline-block; padding-right:12px;}
-				.code_box {padding:@pd_top 0 @pd_top 16px;}
+				.code_box {
+					padding:@pd_top 0 @pd_top 16px;
+					li {height:26px; line-height:26px;}
+				}
 			}
 		}
 	}
@@ -2632,7 +2635,10 @@
 					}
 					.scroll_wrap {margin-left:@size;}
 					.scroll_inner {padding-right:10px;}
-					.code_box {padding:@pd_top 0 @pd_top 10px;}
+					.code_box {
+						padding:@pd_top 0 @pd_top 10px;
+						li {height:22px; line-height:22px;}
+					}
 				}
 			}
 		}
@@ -2889,10 +2895,14 @@
 	.t_aaa {color:#aaa !important;}
 	.t_blue {color:@blue !important;}
 	.t_skyblue {color:@skyBlue !important;}
+	.t_darkblue {color:@darkBlue !important;}
 	.t_red {color:@red !important;}
 	.t_green {color:@green !important;}
 	.t_black {color:#222 !important;}
 	.t_orange {color:@orange !important;}
+	.t_yellow {color:@yellow2 !important;}
+	.t_navy {color:@navy !important;}
+	.t_link {color:@link !important;}
 
 	.weight-500 {font-weight:500 !important;}
 	.weight-400 {font-weight:400 !important;}
@@ -2958,9 +2968,6 @@
 		.con_a, .con_b, .con_c, .equals {width:50px; .t_center;}
 		.result {.t_left; padding-left:15px;}
 	}
-
-	.nth_chart .cell {padding-left:0; padding-right:0;}
-
 	@media(max-width:@screen-sm){
 		.specificity1, .specificity2 {
 			font-size:12px;
@@ -2971,6 +2978,8 @@
 			.result {.t_left; padding-left:10px;}
 		}
 	}
+
+	.nth_chart .cell {padding-left:0; padding-right:0;}
 
 	.adjacent_sibling {
 		@pd:165px;
@@ -3033,6 +3042,141 @@
 			font-family: 'Yeon Sung', cursive;
 		}
 	}
+
+	.ie_no .animation_page {
+		position:relative; z-index:1;
+		h1 {
+			position:relative; z-index:3;
+			line-height:54px; font-size:40px; font-weight:800;
+			background-image:
+					url('/assets/kmtemp/lib/img/wave_w_opacity_10.png'),
+					url('/assets/kmtemp/lib/img/wave_w_opacity_10.png'),
+					url('/assets/kmtemp/lib/img/wave_w_opacity_10.png');
+			background-repeat:repeat-x;
+			background-color:#fff;
+			background-size:1800px 100%;
+			-webkit-background-clip:text;
+			background-clip:text;
+			animation:
+					ani_h1 .7s 3s cubic-bezier(0.65, 0, 0.35, 1) both,
+					bg_ani_linear 35s .7s linear infinite;
+			transform-origin:left bottom;
+		}
+		/*
+		.circle {
+			display:none;
+			position:absolute; left:193px; top:-44px; z-index:1;
+			width:160px; height:160px;
+			i {
+				display:block;
+				width:100%; height:100%; padding:3px;
+				border-width:3px;
+				border-style:solid;
+				border-color:transparent #eee #eee transparent;
+				border-radius:100%;
+				animation:circle_rotate 22s 3s cubic-bezier(0.645, 0.045, 0.355, 1) infinite;
+			}
+		}
+		*/
+		.circle {
+			position:absolute; left:256px; top:-121px; z-index:1;
+			width:250px; height:250px;
+			i {
+				display:block;
+				width:100%; height:100%; padding:3px;
+				border-width:3px;
+				border-style:solid;
+				border-color:transparent #f9f9f9 #f9f9f9 transparent;
+				border-radius:100%;
+				animation:circle_rotate 22s 3s cubic-bezier(0.645, 0.045, 0.355, 1) infinite;
+			}
+		}
+		.light {
+			position:absolute; left:315px; top:-60px; z-index:2;
+			width:130px; height:338px;
+			background-image:url('/assets/kmtemp/lib/img/light-bulb.png');
+			background-size:100% auto;
+			background-repeat:no-repeat;
+			animation:light_move .65s 3s cubic-bezier(0.33, 1, 0.68, 1) both;
+			//animation:light_move .5s 3s cubic-bezier(0.34, 1.56, 0.64, 1) both;
+			&:after {
+				position:absolute; left:0; top:0; opacity:0;
+				width:130px; height:130px;
+				transform:scale(1.5, 1.5);
+				/* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#fff572+0,fff572+100&1+0,0+49 */
+				background: -moz-radial-gradient(center, ellipse cover,  rgba(255,245,114,1) 0%, rgba(255,245,114,0) 49%, rgba(255,245,114,0) 100%); /* FF3.6-15 */
+				background: -webkit-radial-gradient(center, ellipse cover,  rgba(255,245,114,1) 0%,rgba(255,245,114,0) 49%,rgba(255,245,114,0) 100%); /* Chrome10-25,Safari5.1-6 */
+				background: radial-gradient(ellipse at center,  rgba(255,245,114,1) 0%,rgba(255,245,114,0) 49%,rgba(255,245,114,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+				filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fff572', endColorstr='#00fff572',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+				border-radius:100%;
+				animation:light_bulb 10s linear infinite;
+				content:"";
+			}
+		}
+	}
+	.ie_no .ani_note {position:relative; z-index:2;}
+	@media(max-width:@screen-md-max){
+		.ie_no .animation_page {
+			.circle, .light {display:none;}
+		}
+		.ie_no .ani_note {z-index:0;}
+		.ie_no .animation_side.side_menu_area .item.on a:before {
+			font-size:30px; font-weight:800;
+			background-image:
+					url('/assets/kmtemp/lib/img/wave_w_opacity_10.png'),
+					url('/assets/kmtemp/lib/img/wave_w_opacity_10.png'),
+					url('/assets/kmtemp/lib/img/wave_w_opacity_10.png');
+			background-repeat:repeat-x;
+			background-color:#fff;
+			background-size:1800px 100%;
+			-webkit-background-clip:text;
+			background-clip:text;
+			animation:
+					ani_h1 .7s 2s cubic-bezier(0.65, 0, 0.35, 1) both,
+					bg_ani_linear 60s .7s linear infinite;
+		}
+	}
+	@media(max-width:@screen-sm-max){
+		.ie_no .animation_side.side_menu_area .item.on a:before {
+			font-size:20px;
+			animation:
+					ani_h1 .7s 2s cubic-bezier(0.65, 0, 0.35, 1) both,
+					bg_ani_linear 80s .7s linear infinite;
+		}
+	}
+
+	@keyframes ani_h1 {
+		0% {/*transform:scale(1.4,1.4);*/}
+		100% {/*transform:scale(1.4,1.4);*/ color:transparent; background-color:#ddd;}
+	}
+	@keyframes bg_ani_linear {
+		0% {background-position:0 0, -200% 0, -100% 0;}
+		100% {background-position:-1800% 0, -1600% 0, -1700% 0;}
+	}
+	@keyframes circle_rotate {
+		3% {transform:rotate(0deg);}
+		47% {transform:rotate(180deg);}
+		53% {transform:rotate(180deg);}
+		97% {transform:rotate(0deg);}
+	}
+	@keyframes light_bulb {
+		0% {opacity:0; transform:scale(1.5, 1.5);}
+		5% {opacity:1; transform:scale(1.5, 1.5);}
+		10% {opacity:0; transform:scale(1.5, 1.5);}
+		35% {opacity:1; transform:scale(1.5, 1.5);}
+		40% {opacity:0; transform:scale(1.5, 1.5);}
+		50% {opacity:1; transform:scale(1.5, 1.5);}
+		65% {opacity:1; transform:scale(2.5, 2.5);}
+		70% {opacity:1; transform:scale(1.5, 1.5);}
+		100% {opacity:0; transform:scale(1.5, 1.5);}
+	}
+	@keyframes light_move {
+		0% {opacity:0; transform:scale(.3, .3);}
+		50% {opacity:1; transform:scale(1.05, 1.05);}
+		75% {opacity:1; transform:scale(.95, .95);}
+		100% {opacity:1; transform:scale(1, 1);}
+	}
+
 
 
 //sub top , sub content common bakup
