--- a/assets/lib/css/uk.css
+++ b/assets/lib/css/uk.css
@@ -6518,6 +6518,10 @@ body {
 .line_code_box.line_code_number.line_true .code_box {
   padding: 13px 0 13px 16px;
 }
+.line_code_box.line_code_number.line_true .code_box li {
+  height: 26px;
+  line-height: 26px;
+}
 @media (max-width: 767px) {
   .line_code_box {
     padding: 9px 7px 9px 11px;
@@ -6550,6 +6554,10 @@ body {
   }
   .line_code_box.line_code_number.line_true .code_box {
     padding: 9px 0 9px 10px;
+  }
+  .line_code_box.line_code_number.line_true .code_box li {
+    height: 22px;
+    line-height: 22px;
   }
 }
 .img_figure {
@@ -7087,6 +7095,9 @@ body {
 .t_skyblue {
   color: #379ad6 !important;
 }
+.t_darkblue {
+  color: #4961dd !important;
+}
 .t_red {
   color: #e44d26 !important;
 }
@@ -7098,6 +7109,15 @@ body {
 }
 .t_orange {
   color: #f79d30 !important;
+}
+.t_yellow {
+  color: #decd11 !important;
+}
+.t_navy {
+  color: #081121 !important;
+}
+.t_link {
+  color: rgba(0, 50, 132, 0.75) !important;
 }
 .weight-500 {
   font-weight: 500 !important;
@@ -7232,10 +7252,6 @@ body {
   text-align: left;
   padding-left: 15px;
 }
-.nth_chart .cell {
-  padding-left: 0;
-  padding-right: 0;
-}
 @media (max-width: 620px) {
   .specificity1,
   .specificity2 {
@@ -7269,6 +7285,10 @@ body {
     text-align: left;
     padding-left: 10px;
   }
+}
+.nth_chart .cell {
+  padding-left: 0;
+  padding-right: 0;
 }
 .adjacent_sibling {
   padding: 15px 10px;
@@ -7348,6 +7368,211 @@ body {
 .font-face-page h3,
 .font-face-page h4 {
   font-family: 'Yeon Sung', cursive;
+}
+.ie_no .animation_page {
+  position: relative;
+  z-index: 1;
+  /*
+		.circle {
+			display:none;
+			position:absolute; left:193px; top:-44px; z-index:1;
+			width:160px; height:160px;
+			i {
+				display:block;
+				width:100%; height:100%; padding:3px;
+				border-width:3px;
+				border-style:solid;
+				border-color:transparent #eee #eee transparent;
+				border-radius:100%;
+				animation:circle_rotate 22s 3s cubic-bezier(0.645, 0.045, 0.355, 1) infinite;
+			}
+		}
+		*/
+}
+.ie_no .animation_page h1 {
+  position: relative;
+  z-index: 3;
+  line-height: 54px;
+  font-size: 40px;
+  font-weight: 800;
+  background-image: url('/assets/kmtemp/lib/img/wave_w_opacity_10.png'), url('/assets/kmtemp/lib/img/wave_w_opacity_10.png'), url('/assets/kmtemp/lib/img/wave_w_opacity_10.png');
+  background-repeat: repeat-x;
+  background-color: #fff;
+  background-size: 1800px 100%;
+  -webkit-background-clip: text;
+  background-clip: text;
+  animation: ani_h1 0.7s 3s cubic-bezier(0.65, 0, 0.35, 1) both, bg_ani_linear 35s 0.7s linear infinite;
+  transform-origin: left bottom;
+}
+.ie_no .animation_page .circle {
+  position: absolute;
+  left: 256px;
+  top: -121px;
+  z-index: 1;
+  width: 250px;
+  height: 250px;
+}
+.ie_no .animation_page .circle i {
+  display: block;
+  width: 100%;
+  height: 100%;
+  padding: 3px;
+  border-width: 3px;
+  border-style: solid;
+  border-color: transparent #f9f9f9 #f9f9f9 transparent;
+  border-radius: 100%;
+  animation: circle_rotate 22s 3s cubic-bezier(0.645, 0.045, 0.355, 1) infinite;
+}
+.ie_no .animation_page .light {
+  position: absolute;
+  left: 315px;
+  top: -60px;
+  z-index: 2;
+  width: 130px;
+  height: 338px;
+  background-image: url('/assets/kmtemp/lib/img/light-bulb.png');
+  background-size: 100% auto;
+  background-repeat: no-repeat;
+  animation: light_move 0.65s 3s cubic-bezier(0.33, 1, 0.68, 1) both;
+}
+.ie_no .animation_page .light:after {
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 0;
+  width: 130px;
+  height: 130px;
+  transform: scale(1.5, 1.5);
+  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#fff572+0,fff572+100&1+0,0+49 */
+  background: -moz-radial-gradient(center, ellipse cover, #fff572 0%, rgba(255, 245, 114, 0) 49%, rgba(255, 245, 114, 0) 100%);
+  /* FF3.6-15 */
+  background: -webkit-radial-gradient(center, ellipse cover, #fff572 0%, rgba(255, 245, 114, 0) 49%, rgba(255, 245, 114, 0) 100%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: radial-gradient(ellipse at center, #fff572 0%, rgba(255, 245, 114, 0) 49%, rgba(255, 245, 114, 0) 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff572', endColorstr='#00fff572', GradientType=1);
+  /* IE6-9 fallback on horizontal gradient */
+  border-radius: 100%;
+  animation: light_bulb 10s linear infinite;
+  content: "";
+}
+.ie_no .ani_note {
+  position: relative;
+  z-index: 2;
+}
+@media (max-width: 993px) {
+  .ie_no .animation_page .circle,
+  .ie_no .animation_page .light {
+    display: none;
+  }
+  .ie_no .ani_note {
+    z-index: 0;
+  }
+  .ie_no .animation_side.side_menu_area .item.on a:before {
+    font-size: 30px;
+    font-weight: 800;
+    background-image: url('/assets/kmtemp/lib/img/wave_w_opacity_10.png'), url('/assets/kmtemp/lib/img/wave_w_opacity_10.png'), url('/assets/kmtemp/lib/img/wave_w_opacity_10.png');
+    background-repeat: repeat-x;
+    background-color: #fff;
+    background-size: 1800px 100%;
+    -webkit-background-clip: text;
+    background-clip: text;
+    animation: ani_h1 0.7s 2s cubic-bezier(0.65, 0, 0.35, 1) both, bg_ani_linear 60s 0.7s linear infinite;
+  }
+}
+@media (max-width: 767px) {
+  .ie_no .animation_side.side_menu_area .item.on a:before {
+    font-size: 20px;
+    animation: ani_h1 0.7s 2s cubic-bezier(0.65, 0, 0.35, 1) both, bg_ani_linear 80s 0.7s linear infinite;
+  }
+}
+@keyframes ani_h1 {
+  0% {
+    /*transform:scale(1.4,1.4);*/
+  }
+  100% {
+    /*transform:scale(1.4,1.4);*/
+    color: transparent;
+    background-color: #ddd;
+  }
+}
+@keyframes bg_ani_linear {
+  0% {
+    background-position: 0 0, -200% 0, -100% 0;
+  }
+  100% {
+    background-position: -1800% 0, -1600% 0, -1700% 0;
+  }
+}
+@keyframes circle_rotate {
+  3% {
+    transform: rotate(0deg);
+  }
+  47% {
+    transform: rotate(180deg);
+  }
+  53% {
+    transform: rotate(180deg);
+  }
+  97% {
+    transform: rotate(0deg);
+  }
+}
+@keyframes light_bulb {
+  0% {
+    opacity: 0;
+    transform: scale(1.5, 1.5);
+  }
+  5% {
+    opacity: 1;
+    transform: scale(1.5, 1.5);
+  }
+  10% {
+    opacity: 0;
+    transform: scale(1.5, 1.5);
+  }
+  35% {
+    opacity: 1;
+    transform: scale(1.5, 1.5);
+  }
+  40% {
+    opacity: 0;
+    transform: scale(1.5, 1.5);
+  }
+  50% {
+    opacity: 1;
+    transform: scale(1.5, 1.5);
+  }
+  65% {
+    opacity: 1;
+    transform: scale(2.5, 2.5);
+  }
+  70% {
+    opacity: 1;
+    transform: scale(1.5, 1.5);
+  }
+  100% {
+    opacity: 0;
+    transform: scale(1.5, 1.5);
+  }
+}
+@keyframes light_move {
+  0% {
+    opacity: 0;
+    transform: scale(0.3, 0.3);
+  }
+  50% {
+    opacity: 1;
+    transform: scale(1.05, 1.05);
+  }
+  75% {
+    opacity: 1;
+    transform: scale(0.95, 0.95);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1, 1);
+  }
 }
 /*-
 
