- css > 고급 > animation 수정

--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -3121,7 +3121,7 @@
 		}
 		.ie_no .ani_note {z-index:0;}
 		.ie_no .animation_side.side_menu_area .item.on a:before {
-			font-size:30px; font-weight:800;
+			font-size:30px; font-weight:800; color:@navy;
 			background-image:
 					url('/assets/kmtemp/lib/img/wave_w_opacity_10.png'),
 					url('/assets/kmtemp/lib/img/wave_w_opacity_10.png'),
@@ -3137,6 +3137,11 @@
 		}
 	}
 	@media(max-width:@screen-sm-max){
+		.ie_no .animation_page {
+			height:26px;
+			h1 {line-height:26px;}
+			.last_update {margin-top:-22px;}
+		}
 		.ie_no .animation_side.side_menu_area .item.on a:before {
 			font-size:20px;
 			animation:
